# vfs.ipfs

./: CMakeLists.txt
depends/common/c-ipfs/: CMakeLists.txt  c-ipfs.txt  deps.txt
depends/common/c-libp2p/: CMakeLists.txt  c-libp2p.txt
depends/common/c-multiaddr/: CMakeLists.txt  c-multiaddr.txt
depends/common/c-multihash/: CMakeLists.txt  c-multihash.txt
depends/common/c-protobuf/: CMakeLists.txt  c-protobuf.txt
depends/common/lmdb/: CMakeLists.txt  lmdb.txt
src/: addon.cpp
vfs.ipfs/: addon.xml.in
